--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   free-disk-space:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
 
     - name: Free Disk Space (Ubuntu)
@@ -31,7 +31,7 @@ jobs:
   build:
     if: github.event.pull_request.merged == true
     name: Build my project ✨
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       # Checkout
       - name: Checkout repository
